# miade

./: .gitignore  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENCE.txt  README.md  docker-compose.yml  index.html  makenotes.py  miade_model_builder_config.yaml  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run_drug_dosage_extractor.py  setup.cfg  setup.py
.fleet/: run.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_documentation.yml  ci.yml  deploy_documentation.yml  publish.yml
about/overview/: index.html
about/team/: index.html
api-reference/annotator/: index.html
api-reference/concept/: index.html
api-reference/dosage/: index.html
api-reference/dosageextractor/: index.html
api-reference/medsallergiesannotator/: index.html
api-reference/metaannotations/: index.html
api-reference/note/: index.html
api-reference/noteprocessor/: index.html
api-reference/problemsannotator/: index.html
configs/: README.md  miade_config.yaml  miade_model_builder_config.yaml
contributing/: index.html
docs/: contributing.md  index.md
docs/about/: overview.md  team.md
docs/api-reference/: annotator.md  concept.md  dosage.md  dosageextractor.md  medsallergiesannotator.md  metaannotations.md  note.md  noteprocessor.md  problemsannotator.md
docs/user-guide/: configuration.md  configurations.md  cookbook.md  quickstart.md
lookup_data/: allergens_subset.csv  negated.csv  reactions_subset.csv  vtm_to_vmp.csv
notebooks/: build-vocab-embeddings.ipynb  build_snomed_cdb.ipynb  preproces_custom_problems.ipynb
search/: search_index.json
src/: _version.py  build_model_pack.py  pyproject.toml  setup.py
src/miade/: __init__.py  _version.py  annotators.py  concept.py  conceptfilter.py  core.py  deduplicate.py  dosage.py  dosageextractor.py  dosageprocessor.py  doseextractor.py  medicationactivity.py  metaannotations.py  note.py  notesection.py  paragraph.py  paragraphsegmenter.py  snomed.py
src/miade/configs/: debug_config.yml  example_debug_config.yml
src/miade/data/: allergens_subset.csv  allergy_type.csv  common_doses_for_miade.csv  historic.csv  lookup_test.csv  med_lookup_dict.csv  multiwords.csv  negated.csv  patterns.csv  problem_blacklist.csv  regex_para_chunk.csv  singlewords.csv  suspected.csv  transitive.csv  valid_meds.csv  vtm_to_text.csv  vtm_to_vmp.csv
src/miade/dosage_extractor/: entities_refiner.py  pattern_matcher.py  preprocessor.py  utils.py
src/miade/drugdoseade/: entities_refiner.py  pattern_matcher.py  preprocessor.py  utils.py
src/miade/model_builders/: __init__.py  cdbbuilder.py  model_builder_config.yml  preprocess_elg.py  preprocess_fdb.py  preprocess_snomeduk.py  vocabbuilder.py
src/miade/snomed/: relationships.py
src/miade/utils/: __init__.py  annotatorconfig.py  logger.py  metaannotationstypes.py  metacat_utils.py  miade_cat.py  miade_meta_cat.py  miadecat.py  modelfactory.py
src/model_builders/: cdbbuilder.py  create_model_pack.py  model_builder_config.yml  preprocess_fdb.py  preprocess_snomed_uk.py  preprocess_snomeduk.py  vocabbuilder.py
src/nlp_engine_core/: __init__.py  concept.py  core.py  doseextractor.py  list.py  medicationactivity.py  note.py
src/nlp_engine_core/resources/: med_lookup_dict.json
src/scripts/: build_model_pack.py  miade  miade.py
streamlit_app/: .env  Dockerfile  README.md  app.py  miade_meta_cat.py  requirements.txt  utils.py
streamlit_app/samples/: MedCAT_Export.json  problems_synthetic_train_example.csv
streamlit_app/samples/Status/: config.json
streamlit_app/samples/model/meta_Status/: bbpe-merges.txt  bbpe-vocab.json  config.json
tests/: conftest.py  test_annotator.py  test_cdbbuilder.py  test_conceptfilter.py  test_core.py  test_deduplicate.py  test_dosageextractor.py  test_doseextractor.py  test_install.py  test_modelbuilder.py  test_modelbuilder_config.py  test_note.py  test_pipeline.py  test_snomed.py  test_vocabbuilder.py
tests/data/: common_doses_for_miade.csv  preprocessed_fdb.csv  preprocessed_snomed.csv
tests/data/models/: config.yaml
tests/examples/: common_doses_for_miade.csv  example_debug_config.yml  example_elg.csv  example_fdb.csv  example_snomed_subset.csv  vocab_data.txt  wikipedia_sample.txt
tests/examples/example_snomed_sct2_20211124000001Z/Snapshot/Terminology/: sct2_Concept_Snapshot_example_20211124.txt  (+1 more)
user-guide/configurations/: index.html
user-guide/cookbook/: index.html
user-guide/quickstart/: index.html
