[project]
name = "miade"
dynamic = ["version"]
dependencies = [
    "medcat==1.2.8",
    "spacy==3.1.0",
    "typing==3.7.4.3",
    "pandas",
    "typer==0.3.2",
    "click==7.1.2",
    "pathlib",
    "pydantic",
    "scikit-learn",
]

[project.scripts]
miade = "scripts.miade:app"

[tool.setuptools_scm]
write_to = "src/_version.py"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

