[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "miade"
authors = [
    {name = "James Brandreth", email = "j.brandreth@ucl.ac.uk"},
    {name = "Jennifer Jiang", email= "jennifer.jiang.13@ucl.ac.uk"}
]
description = "A set of tools for extracting formattable data from clinical notes stored in electronic health record systems."
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "medcat==1.7.0",
    "spacy>=3.4.2, <3.5.0",  # need to be compatible with latest med7 model
    "pandas<=1.5.3, <2",  # pandas updated to 2.0.0 recently, should we update too?
    "typer>=0.7.0",
    'click>=8.0.4',
    "pathlib>=1.0.1",
    "pydantic>=1.10.0",  # compatibility with spacy
    "negspacy>=1.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.3",
    "jupyterlab>=3.4.7",
    "black>=22.12.0",
]
dashboard = [
    "streamlit>=1.20.0",
    "streamlit-aggrid>=0.3.4.post3",
    "spacy-streamlit>=1.0.5",
    "seaborn>=0.12.2",
]

[project.scripts]
miade = "scripts.miade:app"

[tool.setuptools_scm]
write_to = "src/_version.py"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
miade = ["data/*.csv"]
