[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "miade"
authors = [
    {name = "Jennifer Jiang-Kells", email= "jennifer.jiang.13@ucl.ac.uk"},
    {name = "James Brandreth", email = "j.brandreth@ucl.ac.uk"}
]
description = "A set of tools for extracting formattable data from clinical notes stored in electronic health record systems."
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "medcat==1.9.3",
    "spacy>=3.4.2, <3.5.0",  # need to be compatible with latest med7 model
    "numpy>=1.22.0",
    "pandas>=1.4.2",  # support 2.0.0
    "gensim>=4.3.0",
    "typer>=0.7.0",
    'typing>=3.7.4',
    "pathlib>=1.0.1",
    "pydantic>=1.10.0",  # compatibility with spacy
    "negspacy>=1.0.3",
]
readme = "README.md"
license = {file = "LICENCE.md"}
keywords = ["nlp", "natural-language-processing", "ml", "ehr", "electronic-health-records", "ai", "health", "healthcare"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/uclh-criu/miade"
Documentation = "https://uclh-criu.github.io/miade/"

[project.optional-dependencies]
dev = [
    "pytest>=7.1.3",
    "ruff>=0.5.2",
]
dashboard = [
    "streamlit>=1.20.0",
    "streamlit-aggrid>=0.3.4.post3",
    "spacy-streamlit>=1.0.5",
    "seaborn>=0.12.2",
    "python-dotenv>=1.0.0"
]

[project.scripts]
miade = "scripts.miade:app"

[tool.setuptools_scm]
write_to = "src/_version.py"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
miade = ["data/*.csv"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E721"]